--- a/second.html
+++ b/second.html
@@ -53,6 +53,8 @@
         console.log("구글로 가기!");
         event.stopPropagation()
       });
+
+      link.setAttribute('href', ' ')
     </script>
   </body>
 </html>
